k3s/mkdocs/mkdocs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs-service
spec:
  type: ClusterIP
  selector:
    app: mkdocs-deployment
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
