k3s/mkdocs/mkdocs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mkdocs-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web # for HTTP
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure # for HTTPS
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  # tls:
  # - hosts:
  #   - ttktjmt.com
  #   secretName: mkdocs-tls
  rules:
  # - host: ttktjmt.com
  #   http:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mkdocs-service
            port:
              number: 8000
